--- a/package.json
+++ b/package.json
@@ -1,33 +1,62 @@
 {
   "name": "react-style-loader",
   "version": "2.4.1",
-  "author": "JounQin",
+  "type": "module",
   "description": "React.js style loader module for webpack",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:un-es/react-style-loader.git"
+  "repository": "git+https://github.com/un-es/react-style-loader.git",
+  "author": "JounQin",
+  "license": "MIT",
+  "packageManager": "yarn@4.0.2",
+  "engines": {
+    "node": ">=16.9.0"
   },
+  "main": "index.cjs",
   "files": [
-    "lib",
-    "index.js"
+    "index.cjs",
+    "lib"
   ],
   "scripts": {
-    "test": "jest",
-    "prepublishOnly": "conventional-changelog -p angular -r 2 -i CHANGELOG.md -s"
+    "lint": "eslint . --cache",
+    "prepare": "simple-git-hooks",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest",
+    "release": "clean-pkg-json && changeset publish"
   },
-  "license": "MIT",
   "dependencies": {
-    "hash-sum": "^1.0.2",
-    "loader-utils": "^1.0.2"
+    "hash-sum": "^2.0.0",
+    "loader-utils": "^3.2.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-jest": "^22.1.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "conventional-changelog-cli": "^2.0.1",
-    "jest": "^22.1.4"
+    "@1stg/common-config": "^10.0.0",
+    "@changesets/changelog-github": "^0.5.0",
+    "@changesets/cli": "^2.27.1",
+    "@commitlint/cli": "^18.4.4",
+    "clean-pkg-json": "^1.2.0",
+    "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.1.1",
+    "simple-git-hooks": "^2.9.0"
   },
+  "resolutions": {
+    "prettier": "^3.1.1"
+  },
+  "commitlint": {
+    "extends": "@1stg"
+  },
+  "eslintConfig": {
+    "extends": "@1stg",
+    "globals": {
+      "__REACT_SSR_CONTEXT__": "readonly",
+      "DEBUG": "readonly"
+    }
+  },
+  "eslintIgnore": [
+    "coverage"
+  ],
   "jest": {
-    "collectCoverage": true
-  }
+    "collectCoverage": true,
+    "testEnvironment": "jsdom"
+  },
+  "prettier": "@1stg/prettier-config"
 }
