--- a/package.json
+++ b/package.json
@@ -23,20 +23,22 @@
   },
   "dependencies": {
     "hash-sum": "^2.0.0",
-    "loader-utils": "^3.2.1"
+    "loader-utils": "^2.0.4"
   },
   "devDependencies": {
     "@1stg/common-config": "^10.0.0",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
     "@commitlint/cli": "^18.4.4",
+    "@types/loader-utils": "^2.0.6",
     "clean-pkg-json": "^1.2.0",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.0",
     "prettier": "^3.1.1",
-    "simple-git-hooks": "^2.9.0"
+    "simple-git-hooks": "^2.9.0",
+    "webpack": "^5.89.0"
   },
   "resolutions": {
     "prettier": "^3.1.1"
